<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
            <variable
                name="viewModel"
                type="com.wheretogo.placesandroutesrecommenderapp.ui.signup.SignUpViewModel" />
    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.wheretogo.placesandroutesrecommenderapp.ui.signup.SignUpFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/dim_medium">

            <TextView
                android:id="@+id/selectedPlace"
                style="@style/regularTextViewStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dim_extra"
                android:layout_marginTop="@dimen/dim_medium"
                android:text="@string/sign_up_label_text"
                android:textSize="26sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/nameLabel"
                style="@style/regularTextViewStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dim_medium"
                android:text="@string/sign_up_name_label"
                app:layout_constraintStart_toStartOf="@id/selectedPlace"
                app:layout_constraintTop_toBottomOf="@id/selectedPlace" />

            <EditText
                android:id="@+id/nameEditText"
                style="@style/regularEditTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dim_small"
                android:autofillHints="name"
                android:imeOptions="actionNext"
                android:hint="@string/sign_up_your_name_label"
                android:inputType="textPersonName"
                app:layout_constraintStart_toStartOf="@+id/nameLabel"
                app:layout_constraintTop_toBottomOf="@+id/nameLabel" />

            <TextView
                android:id="@+id/surnameLabel"
                style="@style/regularTextViewStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dim_medium"
                android:text="@string/sign_up_surname_label"
                app:layout_constraintStart_toStartOf="@id/nameEditText"
                app:layout_constraintTop_toBottomOf="@id/nameEditText" />

            <EditText
                android:id="@+id/surnameEditText"
                style="@style/regularEditTextStyle"
                android:layout_width="wrap_content"
                android:imeOptions="actionNext"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dim_small"
                android:autofillHints="name"
                android:hint="@string/sign_up_your_surname_label"
                android:inputType="textPersonName"
                app:layout_constraintStart_toStartOf="@+id/surnameLabel"
                app:layout_constraintTop_toBottomOf="@+id/surnameLabel" />

            <TextView
                android:id="@+id/emailLabel"
                style="@style/regularTextViewStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dim_small"
                android:fontFamily="@font/quicksand_medium"
                android:text="@string/sign_in_email_label_text"
                app:layout_constraintStart_toStartOf="@id/surnameEditText"
                app:layout_constraintTop_toBottomOf="@id/surnameEditText" />

            <EditText
                android:id="@+id/emailAddressEditText"
                style="@style/regularEditTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dim_small"
                android:autofillHints="emailAddress"
                android:imeOptions="actionNext"
                android:hint="@string/sign_in_email_label_text"
                android:inputType="textEmailAddress"
                app:layout_constraintStart_toStartOf="@+id/emailLabel"
                app:layout_constraintTop_toBottomOf="@+id/emailLabel" />

            <TextView
                android:id="@+id/passwordLabel"
                style="@style/regularTextViewStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dim_small"
                android:fontFamily="@font/quicksand_medium"
                android:text="@string/sign_in_password_label_text"
                app:layout_constraintStart_toStartOf="@id/emailAddressEditText"
                app:layout_constraintTop_toBottomOf="@id/emailAddressEditText" />

            <EditText
                android:id="@+id/passwordEditText"
                style="@style/regularEditTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dim_small"
                android:autofillHints="password"
                android:hint="@string/sign_in_password_label_text"
                android:inputType="textPassword"
                android:minHeight="48dp"
                android:imeOptions="actionNext"
                app:layout_constraintStart_toStartOf="@id/passwordLabel"
                app:layout_constraintTop_toBottomOf="@id/passwordLabel" />

            <TextView
                android:id="@+id/confirmPasswordLabel"
                style="@style/regularTextViewStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dim_small"
                android:fontFamily="@font/quicksand_medium"
                android:text="@string/sign_up_confirm_your_password_label"
                app:layout_constraintStart_toStartOf="@id/passwordEditText"
                app:layout_constraintTop_toBottomOf="@id/passwordEditText" />

            <EditText
                android:id="@+id/confirmPasswordEditText"
                style="@style/regularEditTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dim_small"
                android:autofillHints="password"
                android:hint="@string/sign_up_password_again_label_text"
                android:inputType="textPassword"
                app:layout_constraintStart_toStartOf="@id/confirmPasswordLabel"
                app:layout_constraintTop_toBottomOf="@id/confirmPasswordLabel"
                android:imeOptions="actionDone" />

            <CheckBox
                android:id="@+id/agreeTermsCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dim_small"
                android:layout_marginTop="@dimen/dim_medium"
                android:layout_marginBottom="@dimen/dim_medium"
                android:text="I agree to the Terms of Services and Privacy Policy."
                app:layout_constraintBottom_toTopOf="@+id/signUpButton"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/confirmPasswordEditText" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/signUpButton"
                style="@style/orangeButtonStyle"
                android:layout_marginTop="@dimen/dim_medium"
                android:layout_marginEnd="@dimen/dim_medium"
                android:layout_marginStart="@dimen/dim_medium"
                android:layout_marginBottom="@dimen/dim_large"
                android:text="@string/continue_button_text"
                android:onClick="@{ () -> viewModel.continueButtonClick()}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/agreeTermsCheckBox" />

            <TextView
                android:id="@+id/haveAccountLabel"
                style="@style/greySmallTextViewStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dim_small"
                android:layout_marginBottom="@dimen/dim_medium"
                android:text="@string/sign_up_have_an_account_text"
                app:layout_constraintTop_toBottomOf="@id/signUpButton"
                app:layout_constraintStart_toStartOf="@id/confirmPasswordLabel" />

            <TextView
                android:id="@+id/signInButton"
                style="@style/smallTextViewStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dim_small"
                android:layout_marginStart="@dimen/dim_small"
                android:fontFamily="@font/quicksand_medium"
                android:text="@string/sign_in_label_text"
                android:onClick="@{() -> viewModel.loginButtonClick()}"
                app:layout_constraintStart_toEndOf="@+id/haveAccountLabel"
                app:layout_constraintTop_toBottomOf="@id/signUpButton" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</layout>