<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.wheretogo.placesandroutesrecommenderapp.ui.uploadpost.UploadPostViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="56dp"
        android:focusable="true"
        android:padding="@dimen/dim_medium"
        tools:context=".ui.uploadpost.UploadPostFragment">

        <EditText
            android:id="@+id/titleEditText"
            style="@style/smallTextViewStyleForPostUploadTopic"
            android:layout_width="@dimen/dim_zero"
            android:layout_height="60dp"
            android:layout_marginTop="@dimen/dim_medium"
            android:background="@drawable/custom_input"
            android:ems="10"
            android:hint="@string/post_upload_title_text"
            android:imeOptions="actionNext"
            android:inputType="textPersonName"
            android:paddingStart="@dimen/dim_medium"
            android:paddingEnd="@dimen/dim_medium"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/contentEditText"
            style="@style/smallTextViewStyleForPostUploadContent"
            android:layout_width="@dimen/dim_zero"
            android:layout_height="350dp"
            android:layout_marginTop="@dimen/dim_large"
            android:background="@drawable/custom_input"
            android:ems="10"
            android:gravity="top|start"
            android:hint="@string/post_upload_content_text"
            android:imeOptions="actionDone"
            android:paddingStart="@dimen/dim_extra_medium"
            android:paddingTop="@dimen/dim_medium"
            android:paddingEnd="@dimen/dim_extra_medium"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/titleEditText" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/uploadButton"
            style="@style/orangeButtonStyle"
            android:layout_marginBottom="@dimen/dim_small"
            android:enabled="false"
            android:onClick="@{() -> viewModel.uploadClickEvent()}"
            android:text="@string/upload_profile_photo_upload_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ProgressBar
            android:id="@+id/progressBarLoading"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminateDrawable="@drawable/circularprogressbar"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>